lib/src/bindings_native_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Generated bindings for DeepFilterNet libdf C API
class DfBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  DfBindings(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  DfBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Create a DeepFilterNet Model
  ///
  /// Args:
  /// - path: File path to a DeepFilterNet tar.gz onnx model
  /// - atten_lim: Attenuation limit in dB.
  ///
  /// Returns:
  /// - DF state doing the full processing: stft, DNN noise reduction, istft.
  ffi.Pointer<DFState> df_create(
    ffi.Pointer<ffi.Char> path,
    double atten_lim,
    ffi.Pointer<ffi.Char> log_level,
  ) {
    return _df_create(path, atten_lim, log_level);
  }

  late final _df_createPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<DFState> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Float,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('df_create');
  late final _df_create = _df_createPtr
      .asFunction<
        ffi.Pointer<DFState> Function(
          ffi.Pointer<ffi.Char>,
          double,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Get DeepFilterNet frame size in samples.
  int df_get_frame_length(ffi.Pointer<DFState> st) {
    return _df_get_frame_length(st);
  }

  late final _df_get_frame_lengthPtr = _lookup<ffi.NativeFunction<ffi.UintPtr Function(ffi.Pointer<DFState>)>>(
    'df_get_frame_length',
  );
  late final _df_get_frame_length = _df_get_frame_lengthPtr.asFunction<int Function(ffi.Pointer<DFState>)>();

  /// Get the next log message. Must be freed via `df_free_log_msg(ptr)`
  ffi.Pointer<ffi.Char> df_next_log_msg(ffi.Pointer<DFState> st) {
    return _df_next_log_msg(st);
  }

  late final _df_next_log_msgPtr = _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<DFState>)>>(
    'df_next_log_msg',
  );
  late final _df_next_log_msg = _df_next_log_msgPtr.asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<DFState>)>();

  void df_free_log_msg(ffi.Pointer<ffi.Char> ptr) {
    return _df_free_log_msg(ptr);
  }

  late final _df_free_log_msgPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
    'df_free_log_msg',
  );
  late final _df_free_log_msg = _df_free_log_msgPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Set DeepFilterNet attenuation limit.
  ///
  /// Args:
  /// - lim_db: New attenuation limit in dB.
  void df_set_atten_lim(ffi.Pointer<DFState> st, double lim_db) {
    return _df_set_atten_lim(st, lim_db);
  }

  late final _df_set_atten_limPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<DFState>, ffi.Float)>>(
    'df_set_atten_lim',
  );
  late final _df_set_atten_lim = _df_set_atten_limPtr.asFunction<void Function(ffi.Pointer<DFState>, double)>();

  /// Set DeepFilterNet post filter beta. A beta of 0 disables the post filter.
  ///
  /// Args:
  /// - beta: Post filter attenuation. Suitable range between 0.05 and 0;
  void df_set_post_filter_beta(ffi.Pointer<DFState> st, double beta) {
    return _df_set_post_filter_beta(st, beta);
  }

  late final _df_set_post_filter_betaPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<DFState>, ffi.Float)>>(
        'df_set_post_filter_beta',
      );
  late final _df_set_post_filter_beta = _df_set_post_filter_betaPtr
      .asFunction<void Function(ffi.Pointer<DFState>, double)>();

  /// Processes a chunk of samples.
  ///
  /// Args:
  /// - df_state: Created via df_create()
  /// - input: Input buffer of length df_get_frame_length()
  /// - output: Output buffer of length df_get_frame_length()
  ///
  /// Returns:
  /// - Local SNR of the current frame.
  double df_process_frame(
    ffi.Pointer<DFState> st,
    ffi.Pointer<ffi.Float> input,
    ffi.Pointer<ffi.Float> output,
  ) {
    return _df_process_frame(st, input, output);
  }

  late final _df_process_framePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Float Function(
            ffi.Pointer<DFState>,
            ffi.Pointer<ffi.Float>,
            ffi.Pointer<ffi.Float>,
          )
        >
      >('df_process_frame');
  late final _df_process_frame = _df_process_framePtr
      .asFunction<
        double Function(
          ffi.Pointer<DFState>,
          ffi.Pointer<ffi.Float>,
          ffi.Pointer<ffi.Float>,
        )
      >();

  /// Processes a filter bank sample and return raw gains and DF coefs.
  ///
  /// Args:
  /// - df_state: Created via df_create()
  /// - input: Spectrum of shape `[n_freqs, 2]`.
  /// - out_gains_p: Output buffer of real-valued ERB gains of shape `[nb_erb]`. This function
  /// may set this pointer to NULL if the local SNR is greater 30 dB. No gains need to be
  /// applied then.
  /// - out_coefs_p: Output buffer of complex-valued DF coefs of shape `[df_order, nb_df_freqs, 2]`.
  /// This function may set this pointer to NULL if the local SNR is greater 20 dB. No DF
  /// coefficients need to be applied.
  ///
  /// Returns:
  /// - Local SNR of the current frame.
  double df_process_frame_raw(
    ffi.Pointer<DFState> st,
    ffi.Pointer<ffi.Float> input,
    ffi.Pointer<ffi.Pointer<ffi.Float>> out_gains_p,
    ffi.Pointer<ffi.Pointer<ffi.Float>> out_coefs_p,
  ) {
    return _df_process_frame_raw(st, input, out_gains_p, out_coefs_p);
  }

  late final _df_process_frame_rawPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Float Function(
            ffi.Pointer<DFState>,
            ffi.Pointer<ffi.Float>,
            ffi.Pointer<ffi.Pointer<ffi.Float>>,
            ffi.Pointer<ffi.Pointer<ffi.Float>>,
          )
        >
      >('df_process_frame_raw');
  late final _df_process_frame_raw = _df_process_frame_rawPtr
      .asFunction<
        double Function(
          ffi.Pointer<DFState>,
          ffi.Pointer<ffi.Float>,
          ffi.Pointer<ffi.Pointer<ffi.Float>>,
          ffi.Pointer<ffi.Pointer<ffi.Float>>,
        )
      >();

  /// Free a DeepFilterNet Model
  void df_free(ffi.Pointer<DFState> model) {
    return _df_free(model);
  }

  late final _df_freePtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<DFState>)>>(
    'df_free',
  );
  late final _df_free = _df_freePtr.asFunction<void Function(ffi.Pointer<DFState>)>();
}

final class DFState extends ffi.Opaque {}
